third_party/move/move-compiler-v2/tests/ability-check/v1-typing/conditional_copy_invalid.exp

Diagnostics:
error: local `x` of type `M::Box<M::R>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:15:21
   │
15 │         ignore(copy x);
   │                     ^ explicitly copied here

error: local `x` of type `M::Box<M::Box<M::R>>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:17:21
   │
17 │         ignore(copy x);
   │                     ^ explicitly copied here

error: local `x` of type `M::Box<T>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:19:21
   │
19 │         ignore(copy x);
   │                     ^ explicitly copied here

error: local `x` of type `M::Box<M::Box<T>>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:21:21
   │
21 │         ignore(copy x);
   │                     ^ explicitly copied here

error: local `x` of type `M::Pair<M::S, M::R>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:23:21
   │
23 │         ignore(copy x);
   │                     ^ explicitly copied here

error: local `x` of type `M::Box<M::R>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:27:17
   │
27 │         ignore(*x);
   │                 ^ reference content copied here

error: local `x` of type `M::Box<M::Box<M::R>>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:29:17
   │
29 │         ignore(*x);
   │                 ^ reference content copied here

error: local `x` of type `M::Box<T>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:31:17
   │
31 │         ignore(*x);
   │                 ^ reference content copied here

error: local `x` of type `M::Box<M::Box<T>>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:33:17
   │
33 │         ignore(*x);
   │                 ^ reference content copied here

error: local `x` of type `M::Pair<M::R, M::S>` does not have the `copy` ability
   ┌─ tests/ability-check/v1-typing/conditional_copy_invalid.move:35:17
   │
35 │         ignore(*x);
   │                 ^ reference content copied here
